--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,47 @@ label {
   padding: 0.3rem 1.2rem 0.5rem;
   border-radius: 0.3rem;
 }
+
+.res-container {
+  margin: 5rem auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.res-cards {
+  border-radius: 0.3rem;
+  width: 18rem;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.res-cards:hover {
+  box-shadow: 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
+}
+
+.card-details {
+  padding: 0 0.8rem;
+}
+
+.card-details h4 {
+  margin: 0.1rem 0;
+}
+
+.card-details p {
+  margin-top: -1rem;
+}
+
+.res-cards img {
+  width: 100%;
+  object-fit: cover;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+  transition: all 0.3s;
+}
+
+.res-cards img:hover {
+  scale: 1.02;
+}
