--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ label {
 }
 
 .res-container {
+  max-width: 70rem;
   margin: 5rem auto;
   display: flex;
   justify-content: space-around;
@@ -91,10 +92,31 @@ label {
   width: 18rem;
   overflow: hidden;
   transition: all 0.2s ease-in-out;
+  position: relative;
+}
+
+#order-btn {
+  position: absolute;
+  bottom: 5rem;
+  right: 1rem;
+  background-color: #ee5732;
+  border: none;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.4rem;
+  color: #fff;
+  transition: all 0.2s ease-in-out;
+}
+
+#order-btn:hover {
+  background-color: transparent;
+  border: 1px solid #ee5732;
+  color: #ee5732;
+  transform: none;
 }
 
 .res-cards:hover {
   box-shadow: 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .card-details {
@@ -111,6 +133,7 @@ label {
 
 .res-cards img {
   width: 100%;
+  height: 12.5rem;
   object-fit: cover;
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem;
