--- a/src/css/App.css
+++ b/src/css/App.css
@@ -13,9 +13,15 @@ header {
   box-shadow: 0.3rem 0.1rem 0.5rem rgba(0, 0, 0, 0.3);
 }
 
+main {
+  position: relative;
+}
+
 header .logo-img {
   width: 3rem;
 }
+
+
 
 .nav-items {
   display: flex;
@@ -32,20 +38,22 @@ header .logo-img {
 
 button {
   padding: 0.6rem 0.8rem;
-  border-radius: 1rem;
+  border-radius: 0.3rem;
   background: transparent;
-  border: none;
   border: 1px solid #fff;
-  transition: border-color 0.2s;
+  transition: all 0.2s;
   cursor: pointer;
+  color: #fff;
 }
 
 button:hover {
-  border-color: #ee5732;
+  border: 1px solid #ee5732;
+  background-color: transparent;
+  color: #ee5732;
 }
 
 button .cart-img {
-  width: 2.5rem;
+  width: 2rem;
 }
 
 .search-container {
@@ -65,16 +73,33 @@ button .cart-img {
   border-radius: 0.3rem;
 }
 
+.filter-btn {
+  margin: 1.5rem 0 0 4rem;
+  background-color: #ee5732;
+  font-size: 1rem;
+  border-radius: 0.3rem;
+  padding: 0.5rem 0.8rem;
+}
+
+
 @media (min-width: 740px) {
   #search-bar {
     width: 86%;
   }
+
+  .filter-btn {
+    margin-left: 8.2rem;
+    font-size: 1.1rem;
+    padding: 0.8rem;
+  }
 }
 
-label {
+.search-btn {
+  font-size: 1.1rem;
   background-color: #ee5732;
-  padding: 0.3rem 1.2rem 0.5rem;
+  padding: 0.5rem 1.2rem 0.5rem;
   border-radius: 0.3rem;
+  border-width: 1px;
 }
 
 .res-container {
@@ -97,10 +122,10 @@ label {
 
 #order-btn {
   position: absolute;
-  bottom: 5rem;
+  bottom: 1.25rem;
   right: 1rem;
   background-color: #ee5732;
-  border: none;
+  border-width: 1px;
   padding: 0.3rem 0.5rem;
   border-radius: 0.4rem;
   color: #fff;
@@ -111,7 +136,6 @@ label {
   background-color: transparent;
   border: 1px solid #ee5732;
   color: #ee5732;
-  transform: none;
 }
 
 .res-cards:hover {
