--- a/src/css/App.css
+++ b/src/css/App.css
@@ -32,8 +32,21 @@ header .logo-img {
   color: black;
 }
 
-.nav-items a:hover {
+.nav-items a::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0.2rem;
+  background-color: #ee5732;
+  margin: 0.1rem auto -0.2rem;
+  border-radius: 1rem;
+  transition: 0.2s all ease-in-out;
+}
+
+.nav-items a:hover,
+.nav-items a:hover::after {
   color: #ee5732;
+  width: 100%;
 }
 
 button {
@@ -77,7 +90,6 @@ button .cart-img {
   margin: 1.5rem 0 0 4rem;
   background-color: #ee5732;
   font-size: 1rem;
-  border-radius: 0.3rem;
   padding: 0.5rem 0.8rem;
 }
 
@@ -127,7 +139,6 @@ button .cart-img {
   background-color: #ee5732;
   border-width: 1px;
   padding: 0.3rem 0.5rem;
-  border-radius: 0.4rem;
   color: #fff;
   transition: all 0.2s ease-in-out;
 }
@@ -139,7 +150,7 @@ button .cart-img {
 }
 
 .res-cards:hover {
-  box-shadow: 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0.2rem 0.3rem 0.5rem rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
