--- a/src/css/App.css
+++ b/src/css/App.css
@@ -93,7 +93,6 @@ button .cart-img {
   padding: 0.5rem 0.8rem;
 }
 
-
 @media (min-width: 740px) {
   #search-bar {
     width: 86%;
@@ -105,6 +104,7 @@ button .cart-img {
     padding: 0.8rem;
   }
 }
+
 
 .search-btn {
   font-size: 1.1rem;
@@ -118,7 +118,7 @@ button .cart-img {
   max-width: 70rem;
   margin: 5rem auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
