--- a/src/css/App.css
+++ b/src/css/App.css
@@ -127,6 +127,7 @@ button .cart-img {
 .res-cards {
   border-radius: 0.3rem;
   width: 18rem;
+  height: 24rem;
   overflow: hidden;
   transition: all 0.2s ease-in-out;
   position: relative;
