--- a/src/css/App.css
+++ b/src/css/App.css
@@ -83,10 +83,6 @@ button .cart-img {
   margin: 0 auto;
 }
 
-.shimmer_search-container {
-  background-color: #b4b4b4;
-}
-
 #search-bar {
   width: 75%;
   margin-right: 1.8rem;
@@ -110,7 +106,6 @@ button .cart-img {
 
 .shimmer_restaurant {
   padding: 0.5rem 5rem;
-  background-color: #b4b4b4;
   margin-right: 2rem;
 }
 
@@ -161,10 +156,11 @@ button .cart-img {
 }
 
 .shimmer_card {
-  background-color: #b4b4b4;
+  background-color: #e0dfdf;
 }
 
-#order-btn {
+#order-btn,
+.shimmer_order-btn {
   position: absolute;
   bottom: 1.25rem;
   right: 1rem;
@@ -173,6 +169,10 @@ button .cart-img {
   padding: 0.3rem 0.5rem;
   color: #fff;
   transition: all 0.2s ease-in-out;
+}
+
+.shimmer_order-btn {
+  padding: 0.6rem 1.6rem;
 }
 
 #order-btn:hover {
@@ -198,13 +198,28 @@ button .cart-img {
   margin-top: -1rem;
 }
 
-.res-cards img {
+.res-cards img,
+.shimmer_card-image {
   width: 100%;
   height: 12.5rem;
   object-fit: cover;
   border-top-left-radius: 0.3rem;
   border-top-right-radius: 0.3rem;
   transition: all 0.3s;
+}
+
+.shimmer_texts {
+  width: 80%;
+  height: 0.8rem;
+  margin: 2rem auto;
+}
+
+.shimmer_card-image,
+.shimmer_restaurant,
+.shimmer_search-container,
+.shimmer_texts,
+.shimmer_order-btn {
+  background-color: #b4b4b4;
 }
 
 .res-cards img:hover {
