add functinality to logIn buttons
button text will toggle to LogIn and Log Out on click
use useState hook to acheive state management

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -64,6 +64,10 @@ button {
   font-family: 'Inter', sans-serif;
 }
 
+.btn-right {
+  width: 11rem;
+}
+
 .login-btn {
   background-color: #ee5732;
   font-size: 1.01rem;
