--- a/src/css/resMenu.css
+++ b/src/css/resMenu.css
@@ -9,5 +9,30 @@
 
 .res-header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
+}
+
+.col-right div {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    background-color: #a9f0a9;
+    border-radius: 0.3rem;
+}
+
+.res-rating {
+    margin-bottom: 1rem;
+}
+
+.res-rating i {
+    margin-right: 0.3rem;
+}
+
+.res-rating::after {
+    content: '';
+    width: 80%;
+    height: 1px;
+    margin: 0 auto;
+    background-color: rgb(8, 75, 52);
 }
