--- a/src/css/resMenu.css
+++ b/src/css/resMenu.css
@@ -1,6 +1,8 @@
 .res-details {
-    width: 62%;
+    width: 65%;
+    padding-inline: 1rem;
     margin: 0 auto;
+    background-color: #fdfaf9;
 }
 
 .res-details h1 {
@@ -57,6 +59,21 @@
     justify-content: space-between;
     border-bottom: 1px solid #919090;
     padding: 1rem 0;
+    margin-block: 0.5rem;
+}
+
+.menu-lists li:not(:last-of-type) {
+    border-bottom: 1px solid #919090;
+}
+
+li .menu-desc h3 {
+    font-size: 1rem;
+    margin-block: 0.3rem;
+}
+
+li .menu-desc p {
+    margin-top: 0.3rem;
+    font-size: 0.9rem;
 }
 
 li .menu-image {
@@ -66,6 +83,7 @@ li .menu-image {
 
 li .menu-image img {
     width: 100%;
+    height: 85%;
     margin: 0 auto;
     border-radius: 0.3rem;
 }
@@ -77,6 +95,6 @@ button.add-food-btn {
     box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.3);
     padding: 0.5rem 1.5rem;
     color: #000;
-    bottom: 0;
+    bottom: 1rem;
     left: 2.5rem;
 }
