--- a/src/css/resMenu.css
+++ b/src/css/resMenu.css
@@ -96,5 +96,12 @@ button.add-food-btn {
     padding: 0.5rem 1.5rem;
     color: #000;
     bottom: 1rem;
-    left: 2.5rem;
+    left: 2.8rem;
+    font-weight: 700;
+    transition: 0.2s all ease-in-out;
+}
+
+button.add-food-btn:hover {
+    color: #ee5732;
+    border: 1px solid #ee5732;
 }
