use class componenet for about
delete functional component and replace it with class based component
use this.state and this.setState() to manage state in class based component
this.state is an objec that contains all the state variable
this.setState() is a function which takes an object parameter that can change the state variable

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -29,3 +29,18 @@
     color: #fff;
     font-size: 1.5rem;
 }
+
+.class-count {
+    width: 8rem;
+    font-size: 1.1rem;
+    background-color: #fff;
+    color: #f06442;
+    transition: 0.3s all ease-in-out;
+    border: 1px solid #f06442;
+}
+
+.class-count:hover {
+    background-color: #b45b44;
+    color: #fff;
+    border-color: purple;
+}
