--- a/src/css/about.css
+++ b/src/css/about.css
@@ -45,7 +45,13 @@
     border-color: purple;
 }
 
+.bio-container {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
 .avatar-url {
-    width: 20%;
+    width: 18%;
     border-radius: 100%;
 }
